sonali content feedbacks

--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -249,7 +249,7 @@
                   <div class="notification-text align-content-center">Design Linked Incentive (DLI) Scheme
                     <span class="notification-date">21 December, 2021</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757254_notification_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757254_notification_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
@@ -258,7 +258,7 @@
                   <div class="notification-text align-content-center">Guidelines for Design Linked Incentive (DLI) Scheme
                     <span class="notification-date">30 December, 2021</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757229_guidelines_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757229_guidelines_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
               </div>
