--- a/display-scheme.html
+++ b/display-scheme.html
@@ -164,7 +164,7 @@
       <div class="row px-4">
         <div class="col-sm-12">
           <div class="page-main-banner">
-            <h3>Display Fab</h3>
+            <h3>Display Fabs</h3>
           </div>
         </div>
       </div>
@@ -252,7 +252,7 @@
                   <div class="notification-text align-content-center">Guidelines for Modified Scheme for setting up of Display Fabs in India
                     <span class="notification-date">29 May, 2023</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post//1702269362.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post//1702269362.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
@@ -261,7 +261,7 @@
                   <div class="notification-text align-content-center">Modified Scheme for setting up of Display Fabs in India
                     <span class="notification-date">4 October, 2022</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120088_Notification_Modified_Scheme_for_Display_Fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120088_Notification_Modified_Scheme_for_Display_Fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
               </div>
@@ -277,7 +277,7 @@
                     <div class="notification-text align-content-center">Guidelines for Scheme for setting up of Display Fabs in India
                       <span class="notification-date">30 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756595_guidelines_display_fab.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756595_guidelines_display_fab.pdf"><span><img src="images/icons/download_icom.png" alt=""
                       ></span></a></div>
                   </div>
                   <div class="notification-tabs d-flex align-content-center br-8">
@@ -286,7 +286,7 @@
                     <div class="notification-text align-content-center">Scheme for setting up of Display Fabs in India
                       <span class="notification-date">21 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756645_notification_display_fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756645_notification_display_fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
                       ></span></a></div>
                   </div>
                 </div>
@@ -301,7 +301,7 @@
   <section>
     <div class="container my-5">
       <p class="main-heading">More About</p>
-      <p class="sub-heading">Display Fab Scheme</p>
+      <p class="sub-heading">Display Fabs Scheme</p>
       <div class="row">
         <div class="gc-wrapper py-4">
           <ul>
@@ -337,7 +337,7 @@
           <div class="details-cards">
             <div class="details-cards_title">Eligibility</div>
             <div class="details-cards_content">Companies / Consortia / Joint Ventures proposing to set up a Silicon CMOS
-              based Semiconductor Fab in India for manufacturing Logic / Memory / Digital ICs / Analog ICs / Mixed
+              based Semiconductor Fabs in India for manufacturing Logic / Memory / Digital ICs / Analog ICs / Mixed
               Signal ICs / SoCs </div>
           </div>
         </div>
