--- a/our-ministers.html
+++ b/our-ministers.html
@@ -221,7 +221,11 @@
         <div class="row">
         <div class="col-12">
         <div class="gc-wrapper">
-        <div class="accordion-header" id="headingOne"><button aria-controls="collapseOne" aria-expanded="true" class="accordion-button" data-bs-target="#collapseOne" data-bs-toggle="collapse" type="button"><span><img src="images/icons/archive_icon.png" alt="" class="archieve-icon"></span><span class="gc-hw3">Archive</span></button></div>
+        <div class="accordion-header" id="headingOne">
+          <button aria-controls="collapseOne" aria-expanded="false" class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse" type="button">
+            <span><img src="images/icons/archive_icon.png" alt="" class="archieve-icon"></span><span class="gc-hw3">Archive</span>
+          </button>
+        </div>
         </div>
         
         <div aria-labelledby="headingOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample" id="collapseOne">
