--- a/semiconductor-scheme.html
+++ b/semiconductor-scheme.html
@@ -250,7 +250,7 @@
                   <div class="notification-text align-content-center">Guidelines for Modified Scheme for setting up of Semiconductor Fabs in India
                     <span class="notification-date">29 May, 2023</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/May/31/1685527229_Guidelines_for_Modified_Scheme_for_setting_up_of_Semiconductor_Fabs_in_India.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/May/31/1685527229_Guidelines_for_Modified_Scheme_for_setting_up_of_Semiconductor_Fabs_in_India.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
@@ -260,7 +260,7 @@
                   <div class="notification-text align-content-center">Modified Scheme for setting up of Semiconductor Fabs in India
                     <span class="notification-date">4 October, 2022</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665119978_Notification_Modified_Scheme_for_Semiconductor_Fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665119978_Notification_Modified_Scheme_for_Semiconductor_Fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
               </div>
@@ -276,7 +276,7 @@
                     <div class="notification-text align-content-center">Guidelines for Scheme for setting up of Semiconductor Fabs in India
                       <span class="notification-date">30 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756298_guidelines_semiconductor_fab.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756298_guidelines_semiconductor_fab.pdf"><span><img src="images/icons/download_icom.png" alt=""
                       ></span></a></div>
                   </div>
                   <div class="notification-tabs d-flex align-content-center br-8">
@@ -285,7 +285,7 @@
                     <div class="notification-text align-content-center">Scheme for setting up of Semiconductor Fabs in India
                       <span class="notification-date">21 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651758241_notification_semiconductor_fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651758241_notification_semiconductor_fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
                       ></span></a></div>
                   </div>
                 </div>
