--- a/downloads.html
+++ b/downloads.html
@@ -186,7 +186,7 @@
           <thead>
             <tr>
               <th>S.No</th>
-              <th class="w-100">TItle</th>
+              <th class="w-100">Title</th>
               <th class="text-center">Action</th>
             </tr>
           </thead>
