mobile responsiveness work

--- a/about-semicon.html
+++ b/about-semicon.html
@@ -160,7 +160,7 @@
 
   <section>
     <div>
-      <div class="row px-4">
+      <div class="row">
         <div class="col-sm-12">
           <div class="page-main-banner"><h3>Semicon India Programme</h3></div>
         </div>
@@ -168,13 +168,13 @@
     </div>
   </section>
 
-  <section class="p-5">
-    <div class="container-fluid">
+  <section class="py-5">
+    <div class="container">
       <div class="row">
-        <div class="col-sm-6">
-          <div class=""><img src="./images/about-ism/about-semicon-intro.webp" alt=""></div>
+        <div class="col-md-6">
+          <img src="./images/about-ism/about-semicon-intro.webp" alt="" class="img-fluid mb-4">
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <div class="">
             <p>The Union Cabinet had approved the comprehensive Semicon India programme with a financial outlay of INR 76,000 crore for the development of a sustainable semiconductor and display ecosystem in 2021.</p>
             <p>Semicon India Program aims to provide attractive incentive support to companies / consortia that are engaged in Silicon Semiconductor Fabs, Display Fabs, Compound Semiconductors / Silicon Photonics / Sensors (including MEMS) Fabs, Semiconductor Packaging (ATMP / OSAT) and Semiconductor Design.</p>
@@ -186,50 +186,48 @@
     </div>
   </section>
 
-  <section class="bg-primary-aqua p-5">
-    <div class="container-fluid">
+  <section class="bg-primary-aqua py-5">
+    <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4 mb-4">
           <a href="">
             <div class="event-cards">
-              <img src="/images/momento.webp"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
-                <h3>SEMICON INDIA 2024 - Positioning India as a trusted partner in the global Semiconductor Supply Chain</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>11th Sep - 13th Sep 2024</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Greater Noida, Uttar Pradesh</p>
+              <img src="/images/momento.webp" class="img-fluid br-8">
+              <div class="event-content  pt-3">
+                <h3>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain
+                </h3>
+                <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>11th Sep - 13th Sep
+                  2024</p>
+                <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Greater Noida,
+                  Uttar Pradesh</p>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4 mb-4">
           <a href="">
             <div class="event-cards">
-              <img src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG"
-                class="img-fluid br-8">
-              <div class="event-content  py-3">
+              <img src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG" class="img-fluid br-8">
+              <div class="event-content  pt-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>28th July - 30th July 2023</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
+                <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>28th July - 30th
+                  July 2023</p>
+                <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Gandhinagar,
+                  Gujarat</p>
               </div>
             </div>
           </a>
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4 mb-4">
           <a href="">
             <div class="event-cards">
-              <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg"
-                class="img-fluid br-8">
-              <div class="event-content py-3">
+              <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/gallery/april_2022/15.jpg" class="img-fluid br-8">
+              <div class="event-content pt-3">
                 <h3>SemiconIndia 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>29th April - 1st May 2022</p>
-                <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Bengaluru</p>
+                <p><span class=""><img src="images/icons/calendar_icon.png" alt="" class="icon"></span>29th April - 1st
+                  May 2022</p>
+                <p><span class=""><img src="images/icons/location_icon.png" alt="" class="icon"></span>Bengaluru,
+                  Karnataka</p>
               </div>
             </div>
           </a>
@@ -238,71 +236,91 @@
     </div>
   </section>
 
-  <footer class="ism-footer">
-    <div class=" ism-footer-inner-box">
-      <div class="ism-footer-logo ism-footer-box-size">
-        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
-            width="70%"></a>
-        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
-            width="55%"></a>
-        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
-            alt="" width="55%;"></a>
-      </div>
-      <div class="vl"></div>
-      <div class="ism-footer-useful ism-footer-box-size">
-        <div class="ism-footer-useful-links">
-          <h5 class="mb-5">Useful Links</h5>
-          <ul>
-            <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
-            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policy</a></li>
-            <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
-            <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="ism-footer-useful-links">
-          <h5 class="mb-5">Social Media</h5>
-          <ul>
-            <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
-                  alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
-                  alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                  alt="">Webcast</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="vl"></div>
-      <div class="ism-footer-contact ism-footer-box-size">
-        <h5 class="mb-5">Reach out to us</h5>
-        <ul>
-          <li><a href="#" class="d-flex"><img src="images/footer/location_icon.png" alt="">
-              <div>Electronics Niketan 6 CGO Complex, <br> Lodhi Road, New Delhi-110003 India</div>
-            </a></li>
-          <li><a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a></li>
-        </ul>
-        <div class="d-flex">
-          <div class="ism-footer-iframe mt-2">
-               <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
-              frameborder="0" height="100%"></iframe>
+  <footer class="ism-footer py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 d-flex flex-column justify-content-between mb-4">
+          <div class="ism-footer-logo-link">
+            <a href="/index.html">
+              <img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt="">
+            </a>
           </div>
-           <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
-
-            <img src="./images/new_qr_image.png" alt="">
-
+          <div class="ism-footer-logo-link">
+            <a href="https://www.meity.gov.in/">
+              <img class="img-fluid" src="images/footer/meity_footer_logo.png" alt="">
+            </a>
+          </div>
+          <div class="ism-footer-logo-link">
+            <a href="https://dic.gov.in/">
+              <img class="img-fluid" src="images/footer/Digi_india_footer_logo.png" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4 vl">
+          <div class="d-md-flex d-sm-block justify-content-around ism-footer-box-size vt">
+            <div class="ism-footer-useful-links mb-4">
+              <h5 class="">Useful Links</h5>
+              <ul>
+                <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
+                <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
+                    Policies</a></li>
+                <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
+                    Policy</a></li>
+                <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
+                <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
+              </ul>
+            </div>
+            <div class="ism-footer-useful-links mb-4">
+              <h5 class="">Social Media</h5>
+              <ul>
+                <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+                </li>
+                <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img
+                      src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
+                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img
+                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+                <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                      alt="">Webcast</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4  vl">
+          <div class="ism-footer-box-size vt ">
+            <h5 class="">Reach out to us</h5>
+            <ul>
+              <li>
+                <a href="#" class="d-flex"><img src="images/footer/location_icon.png" alt="">
+                  <div>Electronics Niketan 6 CGO Complex, <br> Lodhi Road, New Delhi-110003 India</div>
+                </a>
+              </li>
+              <li>
+                <a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a>
+              </li>
+            </ul>
+            <div class="d-flex">
+              <div class="ism-footer-iframe mt-2">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
+                  frameborder="0" height="100%">
+                </iframe>
+              </div>
+              <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+                <img src="./images/new_qr_image.png" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </footer>
-  <div>
-    <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
-  </div>
+  <section>
+    <div class="ism-footer-copyright">
+      <p>© Copyright India SemiConductor Mission. All Rights Reserved</p>
+    </div>
+  </section>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
