--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -161,7 +161,7 @@
 
   <section>
     <div>
-      <div class="row px-4">
+      <div class="row">
         <div class="col-sm-12">
           <div class="page-main-banner"><h3>Design Linked Incentive (DLI)</h3></div>
         </div>
@@ -170,7 +170,7 @@
   </section>
   <section>
     <div class="container bg-primary-aqua my-4">
-      <div class="row pt-2 pb-3 justify-content-center">
+      <div class="row py-3 justify-content-center">
         <div class="col-auto">
           <div>
             <a href="#" target="_blank" class="theme-Btn theme-Btn-dark user-btn-pad">
@@ -190,18 +190,17 @@
       </div>
     </div>    
   </section>
-  <section class="p-5">
-    <div class="container-fluid">
+  <section class="pb-5 pt-3">
+    <div class="container">
       <div class="row">
-
-        <div class="col-sm-6 p-5">
+        <div class="col-md-6 align-content-center">
           <div class="">
             <h1 class="sub-heading mb-4">About the Scheme </h1>
             <p>The Design Linked Incentive (DLI) Scheme aims to offer financial incentives as well as design
               infrastructure support across various stages of development and deployment of semiconductor design(s) for
               Integrated Circuits (ICs), Chipsets, System on Chips (SoCs), Systems & IP Cores and semiconductor linked
               design(s) over a period of 5 years. </p>
-            <div class="pt-4">
+            <div class="btn-alignment py-4">
               <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">
                 <span><img src="./images/icons/chip_icon.png" alt="" class="social-btn-icon size-big"></span>
                 <span class="mr-5">Apply</span>
@@ -216,17 +215,16 @@
       </div>
     </div>
   </section>
-  <section>
-    <div class="container bg-primary-aqua br-8 career-tabs py-4">
-      <div class="row align-items-center my-4">
-        <div class="col-4">
+  <section class="py-1">
+    <div class="container bg-primary-aqua br-8 career-tabs py-3">
+      <div class="row align-items-center my-4 px-3">
+        <div class="col-sm-12 col-md-4">
           <p class="main-heading">Latest</p>
           <p class="sub-heading">Notifications</p>
         </div>
-        <div class="col-8">
-          <div class="text-right">
-            <ul class="nav nav-tabs" id="myTab2" role="tablist"
-            style="justify-content: end;background: #F3F6FD;padding: 16px;border:none;display: inline-flex;background: #fff;border-radius: 8px;">
+        <div class="col-sm-12 col-md-8">
+          <div class="tabs-aligment">
+            <ul class="nav nav-tabs scheme-tabs" id="myTab2" role="tablist">
             <li class="nav-item" role="presentation"><button aria-controls="photos" aria-selected="true"
                 class="nav-link active" data-bs-target="#photos" data-bs-toggle="tab" id="photos-tab" role="tab"
                 type="button"><span class="px-3">Current</span></button></li>
@@ -244,21 +242,21 @@
             <div class="row ism-elem10_wrap m-0">
               <div class="col-12">
                 <div class="notification-tabs d-flex align-content-center br-8">
-                  <div class="notification-icon"><img src="images/notification_icon.png" alt=""
+                  <div class="scheme-notification-icon"><img src="images/notification_icon.png" alt=""
                       ></div>
                   <div class="notification-text align-content-center">Design Linked Incentive (DLI) Scheme
                     <span class="notification-date">21 December, 2021</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757254_notification_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="scheme-notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757254_notification_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
-                  <div class="notification-icon"><img src="images/notification_icon.png" alt=""
+                  <div class="scheme-notification-icon"><img src="images/notification_icon.png" alt=""
                       ></div>
                   <div class="notification-text align-content-center">Guidelines for Design Linked Incentive (DLI) Scheme
                     <span class="notification-date">30 December, 2021</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757229_guidelines_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="scheme-notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651757229_guidelines_dli.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
               </div>
@@ -282,43 +280,14 @@
       </div>
     </div>
   </section>
-  <!-- <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="accordion gc-wrapper" id="accordionExample">
-            <div class="accordion-item ">
-              <h2 class="accordion-header" id="headingOne">
-                <button aria-controls="collapseOne" aria-expanded="false"
-                  class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
-                  type="button"><span class="main-heading">Design Linked incentive (DLI)</span></button></h2>
 
-              <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
-                <div class="accordion-body">
-                  <div class="gc-wrapper">
-                    <ul>
-                        <li>
-                            Semiconductors are at the heart of all electronic products and constitute a significant share in the Bill of Material (BOM). The National Policy on Electronics 2019 aims to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and envisions creation of a vibrant semiconductor chip design ecosystem in the country. With an exceptional talent pool of 20% of world's semiconductor design engineers and thousands of chips designed by them every year in the country, India is poised
-                            for growth to achieve self-reliance and technology leadership in semiconductor design sector.
-                        </li>
-                        <li>Ministry of Electronics and Information technology has announced the Design Linked Incentive (DLI) Scheme to offset the disabilities in the domestic industry involved in semiconductor design in order to not only move up in value-chain but also strengthen the semiconductor chip design ecosystem in the country. CDAC is responsible for implementation of the DLI Scheme as Nodal Agency.</li>
-                    </ul>
-                </div>
-                  </div>
-              </div>
-            </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section> -->
-  <section>
-    <div class="container my-5">
+  <section class="pt-5">
+    <div class="container">
       <p class="main-heading">More About</p>
       <p class="sub-heading">Design Linked incentive (DLI)
         Scheme</p>
       <div class="row">
-                <div class="gc-wrapper py-4">
+                <div class="gc-wrapper py-3">
                   <ul>
                     <li>
                         Semiconductors are at the heart of all electronic products and constitute a significant share in the Bill of Material (BOM). The National Policy on Electronics 2019 aims to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and envisions creation of a vibrant semiconductor chip design ecosystem in the country. With an exceptional talent pool of 20% of world's semiconductor design engineers and thousands of chips designed by them every year in the country, India is poised
@@ -330,19 +299,19 @@
                 </div>
 
       <div class="row">
-        <div class="col-sm">
+        <div class="col-md-4 mb-4">
           <div class="details-cards">
             <div class="details-cards_title">Objective</div>
             <div class="details-cards_content">To attract large investments for setting up semiconductor wafer fabrication facilities in the country to strengthen the electronics manufacturing ecosystem and help establish a trusted value chain.            </div>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-4 mb-4">
           <div class="details-cards">
             <div class="details-cards_title">Eligibility</div>
             <div class="details-cards_content">Companies / Consortia / Joint Ventures proposing to set up a Silicon CMOS based Semiconductor Fab in India for manufacturing Logic / Memory / Digital ICs / Analog ICs / Mixed Signal ICs / SoCs            </div>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-4 mb-4">
           <div class="details-cards">
             <div class="details-cards_title">Tenure of the Scheme </div>
             <div class="details-cards_content">Support under the scheme shall be provided for a period of six years. The tenure of the actual fiscal support outflow may be extended based on the approval of the Minister of Electronics and Information Technology.
@@ -352,11 +321,11 @@
       </div>
     </div>
   </section>
-  <section>
-    <div class="container mb-5">
-      <p class="sub-heading">Procedure to Apply</p>
+  <section class="py-5">
+    <div class="container">
+      <p class="sub-heading mb-4">Procedure to Apply</p>
       <div class="row">
-        <div class="col-sm">
+        <div class="col-md-3 mb-3">
           <div class="scheme-apply-cards scheme-apply-cards_bg1">
             <div class="scheme-apply-cards_title">
               <div><img src="./images/icons/step_1.png" alt=""></div>
@@ -370,7 +339,7 @@
             </div>           
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-3 mb-3">
           <div class="scheme-apply-cards scheme-apply-cards_bg2">
             <div class="scheme-apply-cards_title">
               <div><img src="./images/icons/step_2.png" alt=""></div>
@@ -384,7 +353,7 @@
             </div>           
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-3 mb-3">
           <div class="scheme-apply-cards scheme-apply-cards_bg3">
             <div class="scheme-apply-cards_title">
               <div><img src="./images/icons/step_3.png" alt=""></div>
@@ -400,7 +369,7 @@
             </div>           
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-3 mb-3">
           <div class="scheme-apply-cards scheme-apply-cards_bg4">
             <div class="scheme-apply-cards_title">
               <div><img src="./images/icons/step_4.png" alt=""></div>
@@ -417,73 +386,91 @@
       </div>
     </div>
   </section>
-  <footer class="ism-footer">
-    <div class=" ism-footer-inner-box">
-      <div class="ism-footer-logo ism-footer-box-size">
-        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid"
-            src="images/footer/Ism_footer_logo.png" alt="" width="70%"></a>
-        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
-            src="images/footer/meity_footer_logo.png" alt="" width="55%"></a>
-        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
-            src="images/footer/Digi_india_footer_logo.png" alt="" width="55%;"></a>
-      </div>
-      <div class="vl"></div>
-      <div class="ism-footer-useful ism-footer-box-size">
-        <div class="ism-footer-useful-links">
-          <h5 class="mb-5">Useful Links</h5>
-          <ul>
-            <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
-                Policies</a></li>
-            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
-                Policy</a></li>
-            <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
-            <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="ism-footer-useful-links">
-          <h5 class="mb-5">Social Media</h5>
-          <ul>
-            <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
-                  alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
-                  alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                  alt="">Webcast</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="vl"></div>
-      <div class="ism-footer-contact ism-footer-box-size">
-        <h5 class="mb-5">Reach out to us</h5>
-        <ul>
-          <li><a href="#" class="d-flex"><img src="images/footer/location_icon.png" alt="">
-              <div>Electronics Niketan 6 CGO Complex, <br> Lodhi Road, New Delhi-110003 India</div>
-            </a></li>
-          <li><a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a></li>
-        </ul>
-        <div class="d-flex">
-          <div class="ism-footer-iframe mt-2">
-               <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
-              frameborder="0" height="100%"></iframe>
+  <footer class="ism-footer py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 d-flex flex-column justify-content-between mb-4">
+          <div class="ism-footer-logo-link">
+            <a href="/index.html">
+              <img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt="">
+            </a>
           </div>
-           <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
-
-            <img src="./images/new_qr_image.png" alt="">
-
+          <div class="ism-footer-logo-link">
+            <a href="https://www.meity.gov.in/">
+              <img class="img-fluid" src="images/footer/meity_footer_logo.png" alt="">
+            </a>
+          </div>
+          <div class="ism-footer-logo-link">
+            <a href="https://dic.gov.in/">
+              <img class="img-fluid" src="images/footer/Digi_india_footer_logo.png" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4 vl">
+          <div class="d-md-flex d-sm-block justify-content-around ism-footer-box-size vt">
+            <div class="ism-footer-useful-links mb-4">
+              <h5 class="">Useful Links</h5>
+              <ul>
+                <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
+                <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
+                    Policies</a></li>
+                <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
+                    Policy</a></li>
+                <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
+                <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
+              </ul>
+            </div>
+            <div class="ism-footer-useful-links mb-4">
+              <h5 class="">Social Media</h5>
+              <ul>
+                <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+                </li>
+                <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img
+                      src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
+                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img
+                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+                <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                      alt="">Webcast</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4  vl">
+          <div class="ism-footer-box-size vt ">
+            <h5 class="">Reach out to us</h5>
+            <ul>
+              <li>
+                <a href="#" class="d-flex"><img src="images/footer/location_icon.png" alt="">
+                  <div>Electronics Niketan 6 CGO Complex, <br> Lodhi Road, New Delhi-110003 India</div>
+                </a>
+              </li>
+              <li>
+                <a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a>
+              </li>
+            </ul>
+            <div class="d-flex">
+              <div class="ism-footer-iframe mt-2">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
+                  frameborder="0" height="100%">
+                </iframe>
+              </div>
+              <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+                <img src="./images/new_qr_image.png" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </footer>
-  <div>
-    <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
-  </div>
+  <section>
+    <div class="ism-footer-copyright">
+      <p>© Copyright India SemiConductor Mission. All Rights Reserved</p>
+    </div>
+  </section>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
