--- a/display-scheme.html
+++ b/display-scheme.html
@@ -160,8 +160,8 @@
   </header>
 
   <section>
-    <div class="container-fluid">
-      <div class="row px-4">
+    <div>
+      <div class="row">
         <div class="col-sm-12">
           <div class="page-main-banner">
             <h3>Display Fabs</h3>
@@ -172,7 +172,7 @@
   </section>
   <section>
     <div class="container bg-primary-aqua my-4">
-      <div class="row pt-2 pb-3 justify-content-center">
+      <div class="row py-3 justify-content-center">
         <div class="col-auto">
           <div>
             <a href="#" target="_blank" class="theme-Btn theme-Btn-dark user-btn-pad">
@@ -190,19 +190,19 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>    
   </section>
-  <section class="p-5">
-    <div class="container-fluid">
+  <section class="pb-5 pt-3">
+    <div class="container">
       <div class="row">
-        <div class="col-sm-6 p-5">
+        <div class="col-md-6 align-content-center">
           <div class="">
             <h1 class="sub-heading mb-4">About the Scheme </h1>
 
             <p>The Scheme for setting up of Display Fabs in India shall extend fiscal support of up to 50% of project
               cost on pari-passu basis to the approved applicants. </p>
 
-            <div class="pt-4">
+            <div class="btn-alignment py-4">
               <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">
                 <span><img src="./images/icons/chip_icon.png" alt="" class="social-btn-icon size-big"></span>
                 <span class="mr-5">Apply</span>
@@ -219,17 +219,16 @@
       </div>
     </div>
   </section>
-  <section>
-    <div class="container bg-primary-aqua br-8 career-tabs py-4">
-      <div class="row align-items-center my-4">
-        <div class="col-4">
+  <section class="py-1">
+    <div class="container bg-primary-aqua br-8 career-tabs py-3">
+      <div class="row align-items-center my-4 px-3">
+        <div class="col-sm-12 col-md-4">
           <p class="main-heading">Latest</p>
           <p class="sub-heading">Notifications</p>
         </div>
-        <div class="col-8">
-          <div class="text-right">
-            <ul class="nav nav-tabs" id="myTab2" role="tablist"
-              style="justify-content: end;background: #F3F6FD;padding: 16px;border:none;display: inline-flex;background: #fff;border-radius: 8px;">
+        <div class="col-sm-12 col-md-8">
+          <div class="tabs-aligment">
+            <ul class="nav nav-tabs scheme-tabs" id="myTab2" role="tablist">
               <li class="nav-item" role="presentation"><button aria-controls="photos" aria-selected="true"
                   class="nav-link active" data-bs-target="#photos" data-bs-toggle="tab" id="photos-tab" role="tab"
                   type="button"><span class="px-3">Current</span></button></li>
@@ -247,21 +246,21 @@
             <div class="row ism-elem10_wrap m-0">
               <div class="col-12">
                 <div class="notification-tabs d-flex align-content-center br-8">
-                  <div class="notification-icon"><img src="images/notification_icon.png" alt=""
+                  <div class="scheme-notification-icon"><img src="images/notification_icon.png" alt=""
                       ></div>
                   <div class="notification-text align-content-center">Guidelines for Modified Scheme for setting up of Display Fabs in India
                     <span class="notification-date">29 May, 2023</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post//1702269362.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="scheme-notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/admin/post//1702269362.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
                 <div class="notification-tabs d-flex align-content-center br-8">
-                  <div class="notification-icon"><img src="images/notification_icon.png" alt=""
+                  <div class="scheme-notification-icon"><img src="images/notification_icon.png" alt=""
                       ></div>
                   <div class="notification-text align-content-center">Modified Scheme for setting up of Display Fabs in India
                     <span class="notification-date">4 October, 2022</span>
                   </div>
-                  <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120088_Notification_Modified_Scheme_for_Display_Fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                  <div class="scheme-notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665120088_Notification_Modified_Scheme_for_Display_Fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
                     ></span></a></div>
                 </div>
               </div>
@@ -272,21 +271,21 @@
               <div class="row ism-elem10_wrap m-0">
                 <div class="col-12">
                   <div class="notification-tabs d-flex align-content-center br-8">
-                    <div class="notification-icon"><img src="images/notification_icon.png" alt=""
+                    <div class="scheme-notification-icon"><img src="images/notification_icon.png" alt=""
                         ></div>
                     <div class="notification-text align-content-center">Guidelines for Scheme for setting up of Display Fabs in India
                       <span class="notification-date">30 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756595_guidelines_display_fab.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    <div class="scheme-notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756595_guidelines_display_fab.pdf"><span><img src="images/icons/download_icom.png" alt=""
                       ></span></a></div>
                   </div>
                   <div class="notification-tabs d-flex align-content-center br-8">
-                    <div class="notification-icon"><img src="images/notification_icon.png" alt=""
+                    <div class="scheme-notification-icon"><img src="images/notification_icon.png" alt=""
                         ></div>
                     <div class="notification-text align-content-center">Scheme for setting up of Display Fabs in India
                       <span class="notification-date">21 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756645_notification_display_fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
+                    <div class="scheme-notification-icon ml-auto"><a target="_blank" href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756645_notification_display_fabs.pdf"><span><img src="images/icons/download_icom.png" alt=""
                       ></span></a></div>
                   </div>
                 </div>
@@ -298,12 +297,12 @@
     </div>
   </section>
 
-  <section>
-    <div class="container my-5">
+  <section class="pt-5">
+    <div class="container">
       <p class="main-heading">More About</p>
       <p class="sub-heading">Display Fabs Scheme</p>
       <div class="row">
-        <div class="gc-wrapper py-4">
+        <div class="gc-wrapper py-3">
           <ul>
             <li>Electronics permeates all sectors of the economy and the electronics industry has cross-cutting economic
               and strategic importance. Currently valued at around USD 2 Trillion (?150 lakh crore), the global
@@ -325,7 +324,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm">
+        <div class="col-md-4 mb-4">
           <div class="details-cards">
             <div class="details-cards_title">Objective</div>
             <div class="details-cards_content">To attract large investments for setting up semiconductor wafer
@@ -333,7 +332,7 @@
               establish a trusted value chain. </div>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-4 mb-4">
           <div class="details-cards">
             <div class="details-cards_title">Eligibility</div>
             <div class="details-cards_content">Companies / Consortia / Joint Ventures proposing to set up a Silicon CMOS
@@ -341,7 +340,7 @@
               Signal ICs / SoCs </div>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-4 mb-4">
           <div class="details-cards">
             <div class="details-cards_title">Tenure of the Scheme </div>
             <div class="details-cards_content">Support under the scheme shall be provided for a period of six years. The
@@ -353,11 +352,11 @@
       </div>
     </div>
   </section>
-  <section>
-    <div class="container mb-5">
-      <p class="sub-heading">Procedure to Apply</p>
+  <section class="py-5">
+    <div class="container">
+      <p class="sub-heading mb-4">Procedure to Apply</p>
       <div class="row">
-        <div class="col-sm">
+        <div class="col-md-3 mb-3">
           <div class="scheme-apply-cards scheme-apply-cards_bg1">
             <div class="scheme-apply-cards_title">
               <div><img src="./images/icons/step_1.png" alt=""></div>
@@ -371,7 +370,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-3 mb-3">
           <div class="scheme-apply-cards scheme-apply-cards_bg2">
             <div class="scheme-apply-cards_title">
               <div><img src="./images/icons/step_2.png" alt=""></div>
@@ -385,7 +384,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-3 mb-3">
           <div class="scheme-apply-cards scheme-apply-cards_bg3">
             <div class="scheme-apply-cards_title">
               <div><img src="./images/icons/step_3.png" alt=""></div>
@@ -403,7 +402,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-md-3 mb-3">
           <div class="scheme-apply-cards scheme-apply-cards_bg4">
             <div class="scheme-apply-cards_title">
               <div><img src="./images/icons/step_4.png" alt=""></div>
@@ -421,73 +420,91 @@
       </div>
     </div>
   </section>
-  <footer class="ism-footer">
-    <div class=" ism-footer-inner-box">
-      <div class="ism-footer-logo ism-footer-box-size">
-        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid"
-            src="images/footer/Ism_footer_logo.png" alt="" width="70%"></a>
-        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
-            src="images/footer/meity_footer_logo.png" alt="" width="55%"></a>
-        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
-            src="images/footer/Digi_india_footer_logo.png" alt="" width="55%;"></a>
-      </div>
-      <div class="vl"></div>
-      <div class="ism-footer-useful ism-footer-box-size">
-        <div class="ism-footer-useful-links">
-          <h5 class="mb-5">Useful Links</h5>
-          <ul>
-            <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
-                Policies</a></li>
-            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
-                Policy</a></li>
-            <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
-            <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="ism-footer-useful-links">
-          <h5 class="mb-5">Social Media</h5>
-          <ul>
-            <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
-                  alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
-                  alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                  alt="">Webcast</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="vl"></div>
-      <div class="ism-footer-contact ism-footer-box-size">
-        <h5 class="mb-5">Reach out to us</h5>
-        <ul>
-          <li><a href="#" class="d-flex"><img src="images/footer/location_icon.png" alt="">
-              <div>Electronics Niketan 6 CGO Complex, <br> Lodhi Road, New Delhi-110003 India</div>
-            </a></li>
-          <li><a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a></li>
-        </ul>
-        <div class="d-flex">
-          <div class="ism-footer-iframe mt-2">
-               <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
-              frameborder="0" height="100%"></iframe>
+  <footer class="ism-footer py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 d-flex flex-column justify-content-between mb-4">
+          <div class="ism-footer-logo-link">
+            <a href="/index.html">
+              <img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt="">
+            </a>
           </div>
-           <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
-
-            <img src="./images/new_qr_image.png" alt="">
-
+          <div class="ism-footer-logo-link">
+            <a href="https://www.meity.gov.in/">
+              <img class="img-fluid" src="images/footer/meity_footer_logo.png" alt="">
+            </a>
+          </div>
+          <div class="ism-footer-logo-link">
+            <a href="https://dic.gov.in/">
+              <img class="img-fluid" src="images/footer/Digi_india_footer_logo.png" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4 vl">
+          <div class="d-md-flex d-sm-block justify-content-around ism-footer-box-size vt">
+            <div class="ism-footer-useful-links mb-4">
+              <h5 class="">Useful Links</h5>
+              <ul>
+                <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
+                <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
+                    Policies</a></li>
+                <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
+                    Policy</a></li>
+                <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
+                <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
+              </ul>
+            </div>
+            <div class="ism-footer-useful-links mb-4">
+              <h5 class="">Social Media</h5>
+              <ul>
+                <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+                </li>
+                <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img
+                      src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
+                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img
+                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+                <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                      alt="">Webcast</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4  vl">
+          <div class="ism-footer-box-size vt ">
+            <h5 class="">Reach out to us</h5>
+            <ul>
+              <li>
+                <a href="#" class="d-flex"><img src="images/footer/location_icon.png" alt="">
+                  <div>Electronics Niketan 6 CGO Complex, <br> Lodhi Road, New Delhi-110003 India</div>
+                </a>
+              </li>
+              <li>
+                <a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a>
+              </li>
+            </ul>
+            <div class="d-flex">
+              <div class="ism-footer-iframe mt-2">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
+                  frameborder="0" height="100%">
+                </iframe>
+              </div>
+              <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+                <img src="./images/new_qr_image.png" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </footer>
-  <div>
-    <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
-  </div>
+  <section>
+    <div class="ism-footer-copyright">
+      <p>© Copyright India SemiConductor Mission. All Rights Reserved</p>
+    </div>
+  </section>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
