--- a/website-policies.html
+++ b/website-policies.html
@@ -16,20 +16,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="/style.css">
-<style>
-.divider-line {
-    background-color: #2F6B99;
-    width: 100%;
-    height: 1px;
-    margin: 20px 0;
-}
-.ismv3-intro-banner{
-  background-image: url(././images/banners/website-banner.webp);
-  background-position: center;
-  background-size: cover;
-  height: 25vh;
-}
-</style>
 </head>
 
 <body>
@@ -173,7 +159,7 @@
 
   <section>
     <div>
-      <div class="row px-4">
+      <div class="row">
         <div class="col-sm-12">
           <div class="page-main-banner">
             <h3>Website Policies</h3>
@@ -183,19 +169,17 @@
     </div>
   </section>
 
-  <section class="p-5">
-    <div class="container-fluid">
+  <section class="py-5">
+    <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-sm-12">
           <div class="">
-            <h2 class="sub-heading mb-3">Hyper linking Policy</h2>
-            <h3 class="main-heading mb-3 ">Links to external websites/portals</h3>
+            <h2 class="sub-heading">Hyper linking Policy</h2>
+            <h3 class="main-heading mb-3"><strong>Links to external websites/portals</strong></h3>
             <p>We do not object to you linking directly to the information that is hosted on our site, and no prior permission is required for the same. However, we would like you to inform us about any links provided to our site so that you can be informed of any changes or updates therein. Also, we do not permit our pages to be loaded into frames on your site. Our website’s pages must load into a newly opened browser window for the user.</p>
-            <div class="divider-line mt-4"></div>
-            <h2 class="sub-heading mb-3 mt-4">Intellectual Property Rights Policy</h2>
+            <h2 class="sub-heading">Intellectual Property Rights Policy</h2>
             <p>The intellectual property rights of the framework, logos, website, themes, and related content, such as user manuals, FAQs, Help, Website Policies, and Terms of Use, are exclusively owned by ISM. Any use or distribution may be done with explicit permission from ISM. Any infringements of the same, any misuse or inappropriate use will be liable for prosecution.</p>
-            <div class="divider-line mt-4"></div>
-            <h2 class="sub-heading mb-3 mt-4">Copyright Policy</h2>
+            <h2 class="sub-heading">Copyright Policy</h2>
             <p>Material featured on this Website may be reproduced free of charge. However, the material has to be reproduced accurately and not be used in a derogatory manner or a misleading context. Wherever the material is being published or issued to others, the source must be prominently acknowledged. However, the permission to reproduce this material shall not extend to any material which is identified as being the copyright of a third party. Authorization to reproduce such material must be obtained from the departments/copyright holders concerned.</p>
             <p>These terms and conditions shall be governed by and construed in accordance with the Indian Laws. Any dispute arising under these terms and conditions shall be subject to the exclusive jurisdiction of the courts of India.</p>
           </div>
@@ -204,71 +188,91 @@
     </div>
   </section>
 
-  <footer class="ism-footer">
-    <div class=" ism-footer-inner-box">
-      <div class="ism-footer-logo ism-footer-box-size">
-        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
-            width="70%"></a>
-        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
-            width="55%"></a>
-        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
-            alt="" width="55%;"></a>
-      </div>
-      <div class="vl"></div>
-      <div class="ism-footer-useful ism-footer-box-size">
-        <div class="ism-footer-useful-links">
-          <h5 class="mb-5">Useful Links</h5>
-          <ul>
-            <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
-            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policy</a></li>
-            <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
-            <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
-          </ul>
-        </div>
-        <div class="ism-footer-useful-links">
-          <h5 class="mb-5">Social Media</h5>
-          <ul>
-            <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
-                  alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
-                  alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                  alt="">Webcast</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="vl"></div>
-      <div class="ism-footer-contact ism-footer-box-size">
-        <h5 class="mb-5">Reach out to us</h5>
-        <ul>
-          <li><a href="#" class="d-flex"><img src="images/footer/location_icon.png" alt="">
-              <div>Electronics Niketan 6 CGO Complex, <br> Lodhi Road, New Delhi-110003 India</div>
-            </a></li>
-          <li><a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a></li>
-        </ul>
-        <div class="d-flex">
-          <div class="ism-footer-iframe mt-2">
-               <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
-              frameborder="0" height="100%"></iframe>
+  <footer class="ism-footer py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 d-flex flex-column justify-content-between mb-4">
+          <div class="ism-footer-logo-link">
+            <a href="/index.html">
+              <img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt="">
+            </a>
           </div>
-           <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
-
-            <img src="./images/new_qr_image.png" alt="">
-
+          <div class="ism-footer-logo-link">
+            <a href="https://www.meity.gov.in/">
+              <img class="img-fluid" src="images/footer/meity_footer_logo.png" alt="">
+            </a>
+          </div>
+          <div class="ism-footer-logo-link">
+            <a href="https://dic.gov.in/">
+              <img class="img-fluid" src="images/footer/Digi_india_footer_logo.png" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4 vl">
+          <div class="d-md-flex d-sm-block justify-content-around ism-footer-box-size vt">
+            <div class="ism-footer-useful-links mb-4">
+              <h5 class="">Useful Links</h5>
+              <ul>
+                <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
+                <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
+                    Policies</a></li>
+                <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
+                    Policy</a></li>
+                <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
+                <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
+              </ul>
+            </div>
+            <div class="ism-footer-useful-links mb-4">
+              <h5 class="">Social Media</h5>
+              <ul>
+                <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+                </li>
+                <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img
+                      src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
+                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+                <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img
+                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+                <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                      alt="">Webcast</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 mb-4  vl">
+          <div class="ism-footer-box-size vt ">
+            <h5 class="">Reach out to us</h5>
+            <ul>
+              <li>
+                <a href="#" class="d-flex"><img src="images/footer/location_icon.png" alt="">
+                  <div>Electronics Niketan 6 CGO Complex, <br> Lodhi Road, New Delhi-110003 India</div>
+                </a>
+              </li>
+              <li>
+                <a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a>
+              </li>
+            </ul>
+            <div class="d-flex">
+              <div class="ism-footer-iframe mt-2">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
+                  frameborder="0" height="100%">
+                </iframe>
+              </div>
+              <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+                <img src="./images/new_qr_image.png" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-
   </footer>
-  <div>
-    <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
-  </div>
+  <section>
+    <div class="ism-footer-copyright">
+      <p>© Copyright India SemiConductor Mission. All Rights Reserved</p>
+    </div>
+  </section>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
